--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Home</title>
+	<link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 	<link rel="stylesheet" href="css/estilo.css">
 </head>
 <body>
@@ -14,7 +17,7 @@
 	</div>
 		
 		</header>
-		<h2 class="tituldiseño"> Diseñador Digital | UX U </h2>
+		<h2 class="tituldiseño -- wow animate__bounce"> Diseñador Digital | UX U </h2>
 		
 		<nav class="border">
 		<ul class="nav">
@@ -46,6 +49,7 @@ Actualmente estoy en la búsqueda de nuevas experiencias con el objetivo de mejo
 		<a href="https://www.behance.net/gianfranco6" class="img3"><img src="assets/img/contacto.png" alt="contacto"></a>
 	</footer>
 </div>
+
 
 </body>
 </html>
