--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 <body>
 <div class="div-padre"> 
 <header class="border">
-		<div class="logo1">
+		<div class="logo1 -- animate__animated animate__fadeIn ">
 			<img src="assets/img/logo png.png" alt="logo" class="logo11">
 	</div>
 		
 		</header>
-		<h2 class="tituldiseño -- wow animate__bounce"> Diseñador Digital | UX U </h2>
+		<h2 class="tituldiseño -- animate__animated animate__bounce"> Diseñador Digital | UX U </h2>
 		
 		<nav class="border">
 		<ul class="nav">
